Load selected keys to virtual grid

--- a/projects/mona-ui/styles/theme.scss
+++ b/projects/mona-ui/styles/theme.scss
@@ -936,7 +936,8 @@ mona-filter-input.mona-popup-filter-input,
     border-radius: var(--mona-border-radius);
 }
 
-.mona-grid-list {
+.mona-grid-list,
+.mona-grid-virtual-list {
     height: 100%;
     overflow: auto scroll;
     width: 100%;
@@ -970,10 +971,7 @@ mona-filter-input.mona-popup-filter-input,
 }
 
 .mona-grid-virtual-list {
-    height: 100%;
     overflow: auto hidden;
-    width: 100%;
-    @include scrollbars-thick;
 }
 
 .mona-grid-filtered {
