--- a/projects/mona-ui/src/lib/grid/components/grid-virtual-list/grid-virtual-list.component.html
+++ b/projects/mona-ui/src/lib/grid/components/grid-virtual-list/grid-virtual-list.component.html
@@ -5,22 +5,25 @@
                 @if (gridService.groupColumns().length === 0) {
                     <ng-container *cdkVirtualFor="let row of data(); let $index=index">
                         <tr [ngClass]="{'mona-selected': row.selected()}"
+                            (click)="onGridRowClick($event, row)"
                             [attr.data-ruid]="row.uid" [attr.data-row-view-index]="$index">
                             @for (column of columns(); track $index) {
-                                <td [style.width.px]="column.calculatedWidth()" [style.min-width.px]="column.minWidth()">
+                                <td [style.width.px]="column.calculatedWidth()"
+                                    [style.min-width.px]="column.minWidth()">
                                     <mona-grid-cell [column]="column" [row]="row"></mona-grid-cell>
                                 </td>
                             }
                         </tr>
                     </ng-container>
                 } @else {
-                    <ng-container *cdkVirtualFor="let rowItem of groupedGridRows()">
-                        @if (rowItem.type==='group') {
+                    <ng-container *cdkVirtualFor="let rowItem of groupedGridRows(); let $index=index">
+                        @if (rowItem.type === 'group') {
                             <tr class="mona-grid-grouping-row">
-                                @for (_ of gridService.groupColumns()|monaSlice:0:rowItem.level+1; track $index) {
+                                @for (_ of gridService.groupColumns()|monaSlice:0:rowItem.level + 1; track $index) {
                                     <td [style.width.px]="gridService.groupColumnWidth">
                                         @if ($index === rowItem.level) {
-                                            <span class="mona-grid-grouping-toggle-wrapper" [style.width.px]="gridService.groupColumnWidth">
+                                            <span class="mona-grid-grouping-toggle-wrapper"
+                                                  [style.width.px]="gridService.groupColumnWidth">
                                                 <button monaButton [flat]="true" (click)="onGroupExpandChange(rowItem)">
                                                     @if (collapsedGroups()|monaContains:rowItem.groupId) {
                                                         <fa-icon [icon]="expandIcon"></fa-icon>
@@ -33,16 +36,20 @@
                                     </td>
                                 }
                                 <td [style.width.px]="gridService.groupColumnWidth*(columns().length + gridService.groupColumns().length)">
-                                    <span class="mona-grid-grouping-row-text">{{ rowItem.column.title() }}: {{ rowItem.groupTitle }}</span>
+                                    <span class="mona-grid-grouping-row-text">{{ rowItem.column.title() }}
+                                        : {{ rowItem.groupTitle }}</span>
                                 </td>
                             </tr>
-                        } @else if (rowItem.type==='row') {
-                            <tr>
-                                @for (_ of gridService.groupColumns()|monaSlice:0:rowItem.level+1; track $index) {
+                        } @else if (rowItem.type === 'row') {
+                            <tr (click)="onGridRowClick($event, rowItem.row)"
+                                [ngClass]="{'mona-selected': rowItem.row.selected()}"
+                                [attr.data-ruid]="rowItem.row.uid" [attr.data-row-view-index]="$index">
+                                @for (_ of gridService.groupColumns()|monaSlice:0:rowItem.level + 1; track $index) {
                                     <td [style.width.px]="gridService.groupColumnWidth"></td>
                                 }
                                 @for (column of columns(); track $index) {
-                                    <td [style.width.px]="column.calculatedWidth()" [style.min-width.px]="column.minWidth()">
+                                    <td [style.width.px]="column.calculatedWidth()"
+                                        [style.min-width.px]="column.minWidth()">
                                         <mona-grid-cell [column]="column" [row]="rowItem.row"></mona-grid-cell>
                                     </td>
                                 }
