--- a/projects/mona-ui/src/lib/grid/components/grid/grid.component.html
+++ b/projects/mona-ui/src/lib/grid/components/grid/grid.component.html
@@ -66,6 +66,12 @@
                                     <span class="mona-grid-column-title">{{ column.title() }}</span>
                                 </div>
                             </ng-template>
+                            <ng-template cdkDragPlaceholder>
+                                @if (groupingInProgress()) {
+                                    <mona-chip style=" z-index: 10; pointer-events: none;"
+                                               [removable]="true">{{column.title()}}</mona-chip>
+                                }
+                            </ng-template>
                         </th>
                     }
                 </tr>
