Virtual scroll for grid (#9)
Implement virtual scroll for grid

--- a/projects/mona-ui/src/lib/grid/components/grid/grid.component.scss
+++ b/projects/mona-ui/src/lib/grid/components/grid/grid.component.scss
@@ -27,9 +27,9 @@
     & table {
         border-collapse: collapse;
         table-layout: fixed;
-        width: 100%;
         & tr {
             position: relative;
+            display: flex;
         }
         & th {
             white-space: nowrap;
@@ -37,6 +37,7 @@
             text-align: left;
             position: relative;
             user-select: none;
+            display: inline-flex;
             &:not(:last-child) {
                 border-right: 1px solid var(--mona-border-color);
             }
@@ -44,7 +45,7 @@
     }
 }
 
-mona-grid-list {
+mona-grid-list, mona-grid-virtual-list {
     border-top: 1px solid var(--mona-border-color);
 }
 
@@ -82,6 +83,10 @@ mona-grid-list {
     display: flex;
     align-items: center;
     justify-content: center;
+    font-size: 0.8em;
+    & i {
+        font-size: 1em;
+    }
 }
 
 .mona-grid-column-drop-hint {
@@ -93,6 +98,10 @@ mona-grid-list {
     z-index: 1;
     top: 0;
     bottom: 0;
+}
+
+.mona-grid-group-column {
+        border-right: 1px solid var(--mona-border-color);
 }
 
 mona-pager {
