--- a/projects/mona-ui/src/lib/grid/components/grid-cell/grid-cell.component.scss
+++ b/projects/mona-ui/src/lib/grid/components/grid-cell/grid-cell.component.scss
@@ -1,11 +1,13 @@
 :host {
-    display: block;
+    display: flex;
     height: 100%;
+    width: 100%;
 }
 
 .mona-grid-cell {
     display: flex;
     align-items: center;
+    flex: 1;
     overflow: hidden;
     padding: 0.375rem 0.6875rem;
     outline: none;
