--- a/projects/mona-ui/src/lib/grid/components/grid-list/grid-list.component.html
+++ b/projects/mona-ui/src/lib/grid/components/grid-list/grid-list.component.html
@@ -1,20 +1,12 @@
 <div class="mona-grid-list-wrap">
     <table>
-        <colgroup>
-            @for (_ of gridService.groupColumns(); track $index) {
-                <col style="width: 34px;">
-            }
-            @for (column of columns(); track $index) {
-                <col [style.width.px]="column.calculatedWidth()" [style.min-width.px]="column.minWidth()">
-            }
-        </colgroup>
         <tbody>
             @if (gridService.groupColumns().length === 0) {
                 @for (row of data(); track row.uid) {
                     <tr (click)="onGridRowClick($event, row)" [ngClass]="{'mona-selected': row.selected()}"
                         [attr.data-ruid]="row.uid" [attr.data-row-view-index]="$index">
                         @for (column of columns(); track $index) {
-                            <td>
+                            <td [style.width.px]="column.calculatedWidth()" [style.min-width.px]="column.minWidth()">
                                 <mona-grid-cell [column]="column" [row]="row"></mona-grid-cell>
                             </td>
                         }
@@ -26,25 +18,27 @@
                             @for (subGroup of groupItem; track $index) {
                                 <tr class="mona-grid-grouping-row">
                                     @for (_ of gridService.groupColumns()|monaSlice:0:cx; track $index) {
-                                        <td></td>
+                                        <td [style.width.px]="gridService.groupColumnWidth"></td>
                                     }
                                     @if (subGroup.rows.length > 0) {
-                                        <td [colSpan]="columns().length + gridService.groupColumns().length">
-                                            <button monaButton [flat]="true" style="width: 34px;"
-                                                    (click)="onGroupExpandChange(subGroup)">
-                                                @if (subGroup.collapsed) {
-                                                    <fa-icon [icon]="expandIcon"></fa-icon>
-                                                } @else {
-                                                    <fa-icon [icon]="collapseIcon"></fa-icon>
-                                                }
-                                            </button>
+                                        <td  [style.width.px]="gridService.groupColumnWidth*(columns().length + gridService.groupColumns().length)">
+                                            <span class="mona-grid-grouping-toggle-wrapper" [style.width.px]="gridService.groupColumnWidth">
+                                                <button monaButton [flat]="true"
+                                                        (click)="onGroupExpandChange(subGroup)">
+                                                    @if (subGroup.collapsed) {
+                                                        <fa-icon [icon]="expandIcon"></fa-icon>
+                                                    } @else {
+                                                        <fa-icon [icon]="collapseIcon"></fa-icon>
+                                                    }
+                                                </button>
+                                            </span>
                                             <span class="mona-grid-grouping-row-text">{{ column.title() }}: {{ subGroup.rows[0].data[column.field()] }}</span>
                                         </td>
                                     }
                                 </tr>
                                 @if (cx < gridService.groupColumns().length - 1 && !subGroup.collapsed) {
                                     <ng-container [ngTemplateOutlet]="gridGroupTemplate"
-                                                  [ngTemplateOutletContext]="{$implicit: subGroup.rows, column: gridService.groupColumns()[cx+1], cx: cx+1, depth:depth+1}">
+                                                  [ngTemplateOutletContext]="{$implicit: subGroup.rows, column: gridService.groupColumns()|monaElementAt:cx+1, cx: cx+1, depth:depth+1}">
                                     </ng-container>
                                 }
                                 @if (depth === gridService.groupColumns().length - 1 && !subGroup.collapsed) {
@@ -53,10 +47,10 @@
                                             [ngClass]="{'mona-selected': row.selected()}"
                                             [attr.data-ruid]="row.uid" [attr.data-row-view-index]="$index">
                                             @for (_ of gridService.groupColumns(); track $index) {
-                                                <td></td>
+                                                <td [style.width.px]="gridService.groupColumnWidth"></td>
                                             }
                                             @for (column of columns(); track $index) {
-                                                <td>
+                                                <td [style.width.px]="column.calculatedWidth()">
                                                     <mona-grid-cell [column]="column" [row]="row"></mona-grid-cell>
                                                 </td>
                                             }
@@ -67,7 +61,7 @@
                         }
                 </ng-template>
                 <ng-container [ngTemplateOutlet]="gridGroupTemplate"
-                              [ngTemplateOutletContext]="{$implicit: data(), column: gridService.groupColumns()[0], cx: 0, depth: 0}"></ng-container>
+                              [ngTemplateOutletContext]="{$implicit: data(), column: gridService.groupColumns()|monaElementAt:0, cx: 0, depth: 0}"></ng-container>
             }
         </tbody>
     </table>
