--- a/projects/mona-ui/src/lib/grid/components/grid-virtual-list/grid-virtual-list.component.scss
+++ b/projects/mona-ui/src/lib/grid/components/grid-virtual-list/grid-virtual-list.component.scss
@@ -1,6 +1,10 @@
+:host {
+    width: 100%;
+    height: 100%;
+}
+
 table {
     border-collapse: collapse;
-    width: 100%;
     height: 100%;
 
     & tbody {
@@ -20,6 +24,7 @@ table {
         &:not(:last-child) {
             border-bottom: 1px solid var(--mona-border-color);
         }
+
     }
 
     & td {
@@ -43,7 +48,6 @@ table {
 }
 
 .mona-grid-grouping-toggle-wrapper {
-    border-right: 1px solid var(--mona-border-color);
     display: inline-flex;
     & button {
         width: 100%;
@@ -55,4 +59,3 @@ table {
     margin-left: 0.5rem;
     white-space: nowrap;
 }
-
