--- a/projects/mona-ui/src/lib/grid/components/grid/grid.component.html
+++ b/projects/mona-ui/src/lib/grid/components/grid/grid.component.html
@@ -17,25 +17,19 @@
 <div class="mona-grid-header" [ngStyle]="{'margin': headerMargin}" #gridHeaderElement>
     <div class="mona-grid-header-wrap">
         <table>
-            <colgroup>
-                @for (_ of gridService.groupColumns(); track $index) {
-                    <col style="width: 34px;">
-                }
-                @for (column of gridService.columns(); track $index) {
-                    <col [style.width.px]="column.calculatedWidth()" [style.min-width.px]="column.minWidth()">
-                }
-            </colgroup>
             <thead>
                 <tr cdkDropList [cdkDropListConnectedTo]="groupable() ? [groupColumnList()!] : []"
                     (cdkDropListDropped)="onColumnDrop($event)">
                     @for (_ of gridService.groupColumns(); track $index) {
-                        <td></td>
+                        <td class="mona-grid-group-column" [style.width.px]="gridService.groupColumnWidth"></td>
                     }
                     @for (column of gridService.columns(); track $index) {
                         <th cdkDrag [cdkDragData]="column" [cdkDragDisabled]="!reorderable() && !groupable()"
                             (mouseenter)="onColumnMouseEnter($event, column)"
                             (cdkDragEntered)="onColumnDragEnter($event, column)"
-                            (cdkDragStarted)="onColumnDragStart($event)">
+                            (cdkDragStarted)="onColumnDragStart($event)"
+                            [style.min-width.px]="column.minWidth()"
+                            [style.width.px]="column.calculatedWidth()">
                             <div class="mona-grid-column-wrap">
                                 @if (column.titleTemplate()) {
                                     <ng-container [ngTemplateOutlet]="column.titleTemplate()"></ng-container>
@@ -49,9 +43,9 @@
                                         <span>{{ column.sortIndex() }}</span>
                                     }
                                     @if (column.sortDirection() === 'asc') {
-                                        <fa-icon [icon]="ascendingSortIcon"></fa-icon>
+                                        <i class="ri-arrow-down-line"></i>
                                     } @else if (column.sortDirection() === 'desc') {
-                                        <fa-icon [icon]="descendingSortIcon"></fa-icon>
+                                        <i class="ri-arrow-up-line"></i>
                                     }
                                     @if (filterable()) {
                                         <mona-grid-filter-menu [column]="column" [type]="column.dataType()"
@@ -64,13 +58,19 @@
                                       [ngStyle]="{'right': dragColumn.index() < dropColumn.index() ? '-1px': null, 'left': dragColumn.index() > dropColumn.index() ? '-1px': null}"></span>
                             }
                             @if (resizable() && !columnDragging) {
-                                <div monaGridColumnResizeHandler [column]="column" class="mona-grid-column-resizer"
+                                <div monaGridColumnResizeHandler [column]="column" [gridId]="uid" class="mona-grid-column-resizer"
                                      (resizeStart)="onColumnResizeStart()" (resizeEnd)="resizing=false;"></div>
                             }
                             <ng-template cdkDragPreview>
                                 <div class="mona-grid-column-drag-preview">
                                     <span class="mona-grid-column-title">{{ column.title() }}</span>
                                 </div>
+                            </ng-template>
+                            <ng-template cdkDragPlaceholder>
+                                @if (groupingInProgress()) {
+                                    <mona-chip style=" z-index: 10; pointer-events: none;"
+                                               [removable]="true">{{column.title()}}</mona-chip>
+                                }
                             </ng-template>
                         </th>
                     }
@@ -81,8 +81,14 @@
 </div>
 
 
-<mona-grid-list [columns]="gridService.columns()" [data]="gridService.viewPageRows()"></mona-grid-list>
-<mona-pager [skip]="gridService.pageState.skip()" [pageSize]="gridService.pageState.take()"
-            [total]="gridService.viewRowCount()"
-            [pageInput]="true" [pageSizeValues]="pageSizeValues()" [responsive]="responsivePager()"
-            (pageSizeChange)="onPageSizeChange($event)" (pageChange)="onPageChange($event)"></mona-pager>
+
+
+@if (gridService.virtualScrollOptions().enabled) {
+    <mona-grid-virtual-list [columns]="gridService.columns()" [data]="gridService.viewRows()"></mona-grid-virtual-list>
+} @else {
+    <mona-grid-list [columns]="gridService.columns()" [data]="gridService.viewPageRows()"></mona-grid-list>
+    <mona-pager [skip]="gridService.pageState.skip()" [pageSize]="gridService.pageState.take()"
+                [total]="gridService.viewRowCount()"
+                [pageInput]="true" [pageSizeValues]="pageSizeValues()" [responsive]="responsivePager()"
+                (pageSizeChange)="onPageSizeChange($event)" (pageChange)="onPageChange($event)"></mona-pager>
+}
