--- a/projects/mona-ui/styles/theme.scss
+++ b/projects/mona-ui/styles/theme.scss
@@ -974,6 +974,38 @@ mona-filter-input.mona-popup-filter-input,
     overflow: auto hidden;
 }
 
+.mona-grid-grouping-row {
+    width: 100%;
+    border-right: 1px solid var(--mona-border-color);
+    & > td {
+        display: flex;
+        align-items: center;
+    }
+    & > td:last-child {
+        padding: 0;
+        border-right: none !important;
+    }
+}
+
+.mona-grid-grouping-toggle-wrapper,
+.mona-grid-detail-toggle-wrapper {
+    display: inline-flex;
+    & button {
+        width: 100%;
+        height: 100%;
+        &:focus {
+            box-shadow: none;
+        }
+    }
+}
+
+.mona-grid-grouping-row-text {
+    font-weight: bold;
+    margin-left: 0.5rem;
+    white-space: nowrap;
+}
+
+
 .mona-grid-filtered {
     color: var(--mona-primary-light);
 }
@@ -1017,8 +1049,6 @@ mona-filter-input.mona-popup-filter-input,
         }
     }
 }
-
-
 
 /** Inputs */
 
