--- a/projects/mona-ui/src/lib/date-inputs/date-time-picker/date-time-picker.component.html
+++ b/projects/mona-ui/src/lib/date-inputs/date-time-picker/date-time-picker.component.html
@@ -3,11 +3,11 @@
        (ngModelChange)="onDateStringEdit($event)" (blur)="onDateInputBlur()">
 <button monaButton class="mona-input-button" (click)="onDateInputButtonClick()"
         [disabled]="disabled()" [tabindex]="-1">
-    <fa-icon [icon]="dateIcon"></fa-icon>
+    <i class="ri-calendar-line"></i>
 </button>
 <button monaButton class="mona-input-button" (click)="onTimeInputButtonClick()"
         [disabled]="disabled()" [tabindex]="-1">
-    <fa-icon [icon]="timeIcon"></fa-icon>
+    <i class="ri-time-line"></i>
 </button>
 
 <ng-template #datePopupTemplate>
