--- a/projects/mona-ui/src/lib/date-inputs/time-picker/time-picker.component.html
+++ b/projects/mona-ui/src/lib/date-inputs/time-picker/time-picker.component.html
@@ -3,7 +3,7 @@
        (ngModelChange)="onDateStringEdit($event)" (blur)="onTimeInputBlur()">
 <button monaButton class="mona-input-button" (click)="onTimeInputButtonClick()"
         [disabled]="disabled()" [tabindex]="-1">
-    <fa-icon [icon]="timeIcon"></fa-icon>
+    <i class="ri-time-line"></i>
 </button>
 
 <ng-template #timePopupTemplate>
