--- a/projects/mona-ui/src/lib/grid/components/grid/grid.component.html
+++ b/projects/mona-ui/src/lib/grid/components/grid/grid.component.html
@@ -43,14 +43,14 @@
 <div class="mona-grid-header" [ngStyle]="{'margin': headerMargin}" #gridHeaderElement>
     <div class="mona-grid-header-wrap">
         <table>
-            <thead>
+            <thead [style.visibility]="!gridWidthSet()?'hidden':undefined">
                 <tr cdkDropList [cdkDropListConnectedTo]="groupable() ? [groupColumnList()!] : []"
                     (cdkDropListDropped)="onColumnDrop($event)">
                     @for (_ of gridService.groupColumns(); track $index) {
-                        <td class="mona-grid-group-column" [style.width.px]="gridService.groupColumnWidth"></td>
+                        <th class="mona-grid-group-column" [style.width.px]="gridService.groupColumnWidth"></th>
                     }
                     @if (gridService.masterDetailTemplate()) {
-                        <td class="mona-grid-detail-column" [style.width.px]="gridService.groupColumnWidth"></td>
+                        <th class="mona-grid-detail-column" [style.width.px]="gridService.groupColumnWidth"></th>
                     }
                     @for (column of gridService.columns(); track $index) {
                         <th cdkDrag [cdkDragData]="column" [cdkDragDisabled]="!reorderable() && !groupable()"
@@ -109,15 +109,14 @@
     </div>
 </div>
 
-
-
-
-@if (gridService.virtualScrollOptions().enabled) {
-    <mona-grid-virtual-list [columns]="gridService.columns()" [data]="gridService.viewRows()"></mona-grid-virtual-list>
-} @else {
-    <mona-grid-list [columns]="gridService.columns()" [data]="gridService.viewPageRows()"></mona-grid-list>
-    <mona-pager [skip]="gridService.pageState.skip()" [pageSize]="gridService.pageState.take()"
-                [total]="gridService.viewRowCount()"
-                [pageInput]="true" [pageSizeValues]="pageSizeValues()" [responsive]="responsivePager()"
-                (pageSizeChange)="onPageSizeChange($event)" (pageChange)="onPageChange($event)"></mona-pager>
+@defer (when gridWidthSet()) {
+    @if (gridService.virtualScrollOptions().enabled) {
+        <mona-grid-virtual-list [columns]="gridService.columns()" [data]="gridService.viewRows()"></mona-grid-virtual-list>
+    } @else {
+        <mona-grid-list [columns]="gridService.columns()" [data]="gridService.viewPageRows()"></mona-grid-list>
+        <mona-pager [skip]="gridService.pageState.skip()" [pageSize]="gridService.pageState.take()"
+                    [total]="gridService.viewRowCount()"
+                    [pageInput]="true" [pageSizeValues]="pageSizeValues()" [responsive]="responsivePager()"
+                    (pageSizeChange)="onPageSizeChange($event)" (pageChange)="onPageChange($event)"></mona-pager>
+    }
 }
